Fixes styling on mobile for post statBar.

--- a/src/components/post.module.css
+++ b/src/components/post.module.css
@@ -66,6 +66,7 @@
     width: 430px;
     justify-content: space-between;
     margin-top: 20px;
+    flex-wrap: wrap;
 }
 
 .stat {
@@ -135,5 +136,12 @@
 
     .commentSeparator {
         width: 85vw;
+    }
+}
+
+@media(max-width: 500px) {
+    .statBar {
+        width: 75vw;
+        justify-content: space-evenly;
     }
 }
